@@ -1,3 +1,6 @@
+Dec 30, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
+- changed textentries to comboboxes for q3/wolf protocol selection
+
 Dec 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
 - added gametypes for truecombat
 - wrote function for determining the gametype to get rid of all
